Added interpolated data functions - added counter next to play button

--- a/tools/gyroscope_visualizer/index.html
+++ b/tools/gyroscope_visualizer/index.html
@@ -78,6 +78,7 @@
         <script src="./scripts.js" type="module"></script>
         <input id="reset" type="button" value="Reset">
         <input id="start" type="button" value="&#9658;">
+        <div id="timer"></div>
     </div>
     <div id="data-table"></div>
 </body>
